src/third_party/blink/web_tests/virtual/web-components-v0-disabled/fast/dom/hover-node-refcnt-asan-crash-expected.txt
CONSOLE ERROR: line 28: Uncaught TypeError: div1.createShadowRoot is not a function
1

This test should not crash on ASAN
